--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,36 +1,62 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:orientation="vertical"
-              android:paddingLeft="20dp"
-              android:paddingRight="20dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:paddingLeft="24dp"
+    android:paddingRight="24dp"
+    android:paddingTop="56dp">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="24dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:contentDescription="" />
 
     <EditText
         android:id="@+id/login_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:hint="@string/prompt_login"
         android:inputType="text"
-        android:maxLines="1"
-        android:padding="10dp"/>
+        android:maxLines="1" />
 
     <EditText
         android:id="@+id/password_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:hint="@string/prompt_password"
-        android:inputType="textPassword"
-        android:padding="10dp"/>
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/signin_button"
-        android:onClick="onClicked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="@string/button_sign_in"/>
+        android:layout_marginBottom="24dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/colorPrimaryDark"
+        android:onClick="onClicked"
+        android:padding="12dp"
+        android:text="@string/button_sign_in" />
+
+    <TextView
+        android:id="@+id/link_signup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:gravity="center"
+        android:autoLink="web"
+        android:text="@string/signup_text"
+        android:textSize="16sp" />
 
 
 </LinearLayout>
