--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -2,14 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     android:background="@android:color/background_light"
+    android:contentDescription="@string/image_content"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/gameName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
+        android:padding="10dp"
         android:text=""
         android:textSize="20sp"></TextView>
 
@@ -17,21 +21,27 @@
         android:id="@+id/gameDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="10dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="5dp"
+        android:padding="10dp"
         android:text=""></TextView>
 
     <TextView
         android:id="@+id/gameTimeOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="10dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="5dp"
+        android:padding="10dp"
         android:text=""></TextView>
 
     <ImageView
         android:id="@+id/gameImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="5dp"
+        android:contentDescription=""
+        android:padding="10dp"
         android:src="@mipmap/ic_launcher"></ImageView>
 </LinearLayout>
