--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -3,21 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/background_light"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginEnd="10dp" >
 
     <TextView
-        android:id="@+id/taskId"
+        android:id="@+id/task_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
         android:text=""
-        android:textSize="20sp"></TextView>
+        android:textSize="20sp">
+    </TextView>
 
     <TextView
-        android:id="@+id/taskTitle"
+        android:id="@+id/task_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="10dp"
-        android:text=""></TextView>
+        android:layout_gravity="end"
+        android:layout_marginEnd="10dp"
+        android:text="" >
+    </TextView>
 </LinearLayout>
