--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,7 @@
         android:layout_marginBottom="24dp"
         android:layout_marginTop="24dp"
         android:background="@color/colorPrimaryDark"
-        android:onClick="onClicked"
+        android:onClick="logIn"
         android:padding="12dp"
         android:text="@string/button_sign_in" />
 
@@ -53,8 +53,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:autoLink="web"
-        android:clickable="true"
         android:gravity="center"
         android:text="@string/signup_text"
         android:textSize="16sp" />
