--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -19,7 +19,10 @@
         android:layout_margin="5dp"
         android:hint="@string/prompt_answer"
         android:inputType="text"
-        android:padding="10dp" />
+        android:maxLines="@integer/max_lines_text"
+        android:minLines="@integer/min_lines_text"
+        android:padding="10dp"
+        android:scrollbars="vertical" />
 
     <Button
         android:id="@+id/button"
