--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -1,27 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/background_light"
-    android:orientation="vertical"
-    android:layout_marginEnd="10dp" >
+    android:useDefaultMargins="true"
+    android:columnCount="2" >
 
     <TextView
         android:id="@+id/task_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
+        android:layout_column="0"
+        android:layout_margin="5dp"
+        android:layout_row="0"
+        android:padding="3dp"
         android:text=""
-        android:textSize="20sp">
+        android:textSize="16sp"
+        android:textStyle="bold">
+
     </TextView>
 
     <TextView
-        android:id="@+id/task_title"
-        android:layout_width="wrap_content"
+        android:id="@+id/task_description"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginEnd="10dp"
-        android:text="" >
+        android:layout_column="1"
+        android:layout_margin="5dp"
+        android:layout_row="0"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text=""
+        android:textSize="16sp">
+
     </TextView>
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/task_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:layout_margin="5dp"
+        android:layout_row="1"
+        android:padding="10dp"
+        android:text=""
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:maxLines="1">
+
+    </TextView>
+
+</GridLayout>
