--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -22,12 +22,14 @@
 
     <TextView
         android:id="@+id/task_description"
-        android:layout_width="match_parent"
+        android:layout_width="353dp"
         android:layout_height="wrap_content"
         android:layout_column="1"
+        android:layout_gravity="center_horizontal|start"
         android:layout_margin="5dp"
         android:layout_row="0"
-        android:maxLines="1"
+        android:ellipsize="end"
+        android:maxLines="3"
         android:padding="5dp"
         android:text=""
         android:textSize="16sp">
@@ -42,11 +44,11 @@
         android:layout_columnSpan="2"
         android:layout_margin="5dp"
         android:layout_row="1"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:padding="10dp"
-        android:text=""
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:maxLines="1">
+        android:textSize="16sp"
+        android:textStyle="bold">
 
     </TextView>
 
