--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -10,6 +10,7 @@
         android:layout_margin="5dp"
         android:padding="10dp"
         android:text=""
+        android:textColor="@android:color/black"
         android:textSize="16sp" />
 
     <EditText
