--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -1,55 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     android:background="@android:color/background_light"
-    android:useDefaultMargins="true"
-    android:columnCount="2" >
+    android:padding="5dp" >
 
     <TextView
         android:id="@+id/task_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_margin="5dp"
-        android:layout_row="0"
+        android:layout_alignBottom="@+id/task_description"
+        android:layout_alignLeft="@+id/task_text"
+        android:layout_alignStart="@+id/task_text"
+        android:layout_alignTop="@+id/task_description"
+        android:gravity="center"
         android:padding="3dp"
         android:text=""
+        android:textColor="@android:color/black"
         android:textSize="16sp"
-        android:textStyle="bold">
-
-    </TextView>
+        android:textStyle="bold"></TextView>
 
     <TextView
         android:id="@+id/task_description"
-        android:layout_width="353dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_gravity="center_horizontal|start"
+        android:layout_alignParentEnd="true"
         android:layout_margin="5dp"
-        android:layout_row="0"
+        android:layout_toEndOf="@id/task_id"
         android:ellipsize="end"
+        android:gravity="start|center"
         android:maxLines="3"
         android:padding="5dp"
         android:text=""
+        android:textColor="@android:color/black"
         android:textSize="16sp">
-
     </TextView>
 
     <TextView
         android:id="@+id/task_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
         android:layout_margin="5dp"
-        android:layout_row="1"
         android:ellipsize="end"
         android:maxLines="1"
         android:padding="10dp"
+        android:textColor="@android:color/black"
         android:textSize="16sp"
-        android:textStyle="bold">
-
+        android:textStyle="bold"
+        android:layout_below="@id/task_description" >
     </TextView>
 
-</GridLayout>
+</RelativeLayout>
