Updated adapters for getting new values from api, overloaded contructors in entities for compatibility.

--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -51,4 +51,10 @@
         android:layout_below="@id/task_description" >
     </TextView>
 
+    <TextView
+        android:id="@+id/task_cost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </TextView>
+
 </RelativeLayout>
