--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -44,6 +44,18 @@
 
     </TextView>
 
+    <TextView
+        android:id="@+id/gameTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </TextView>
+
+    <TextView
+        android:id="@+id/gameScheme"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </TextView>
+
     <ImageView
         android:id="@+id/gameImage"
         android:layout_width="wrap_content"
