--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -3,23 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="@android:color/background_light"
     android:padding="5dp" >
+
 
     <TextView
         android:id="@+id/task_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/task_description"
-        android:layout_alignLeft="@+id/task_text"
-        android:layout_alignStart="@+id/task_text"
         android:layout_alignTop="@+id/task_description"
         android:gravity="center"
         android:padding="3dp"
         android:text=""
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        android:textStyle="bold"></TextView>
+        android:textStyle="bold" />
+
 
     <TextView
         android:id="@+id/task_description"
@@ -34,27 +33,6 @@
         android:padding="5dp"
         android:text=""
         android:textColor="@android:color/black"
-        android:textSize="16sp">
-    </TextView>
-
-    <TextView
-        android:id="@+id/task_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/task_description" >
-    </TextView>
-
-    <TextView
-        android:id="@+id/task_cost"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </TextView>
+        android:textSize="16sp" />
 
 </RelativeLayout>
