--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -1,70 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="@android:color/background_light"
-    android:contentDescription="@string/image_content"
-    android:orientation="vertical">
+    android:contentDescription="@string/image_content">
 
     <TextView
         android:id="@+id/gameName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:padding="10dp"
-        android:text=""
+        android:layout_margin="5dp"
+        android:padding="5dp"
+        android:gravity="center"
         android:textColor="@android:color/black"
-        android:textSize="20sp">
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/gameDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginEnd="5dp"
-        android:padding="10dp"
-        android:text=""
-        android:textColor="@android:color/black">
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/gameTimeOut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginEnd="5dp"
-        android:padding="10dp"
-        android:text=""
-        android:textColor="@android:color/black">
-
-    </TextView>
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/gameTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </TextView>
-
-    <TextView
-        android:id="@+id/gameScheme"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </TextView>
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/gameName"
+        android:layout_margin="5dp"
+        android:padding="5dp"
+        android:gravity="start"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/gameImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/gameName"
         android:layout_marginBottom="5dp"
         android:layout_marginStart="5dp"
         android:contentDescription="@string/image_content"
-        android:padding="10dp"
-        android:src="@mipmap/ic_launcher">
+        android:padding="5dp"
+        android:src="@mipmap/ic_launcher" />
 
-    </ImageView>
-</LinearLayout>
+    <TextView
+        android:id="@+id/gameDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/gameImage"
+        android:layout_below="@id/gameTitle"
+        android:gravity="end"
+        android:layout_margin="5dp"
+        android:padding="5dp"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
+
+
+    <TextView
+        android:id="@+id/gameTimeOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/gameImage"
+        android:layout_below="@id/gameDate"
+        android:gravity="end"
+        android:layout_margin="5dp"
+        android:padding="5dp"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
+
+</RelativeLayout>
