--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -9,25 +9,35 @@
         android:id="@+id/task_id_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/task_description_txt"
-        android:layout_alignStart="@+id/task_text_txt"
-        android:layout_alignTop="@+id/task_description_txt"
+        android:layout_alignBottom="@+id/task_cost_txt"
+        android:layout_alignStart="@+id/task_description_txt"
+        android:layout_alignTop="@+id/task_cost_txt"
+        android:layout_margin="5dp"
         android:gravity="center"
-        android:padding="3dp"
+        android:padding="5dp"
         android:text=""
         android:textColor="@android:color/black"
-        android:textSize="17sp" />
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/task_description_txt"
+        android:id="@+id/task_cost_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_margin="5dp"
         android:layout_toEndOf="@id/task_id_txt"
-        android:ellipsize="end"
         android:gravity="start|center"
-        android:padding="5dp"
+        android:padding="10dp"
+        android:textColor="@android:color/black"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/task_description_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/task_cost_txt"
+        android:layout_margin="5dp"
+        android:padding="10dp"
         android:textColor="@android:color/black"
         android:textSize="17sp" />
 
@@ -35,25 +45,24 @@
         android:id="@+id/task_text_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/task_description_txt"
+        android:layout_below="@+id/task_description_txt"
         android:layout_margin="5dp"
-        android:ellipsize="end"
         android:padding="10dp"
         android:textColor="@android:color/black"
-        android:textSize="17sp" />
+        android:textStyle="bold|italic" />
 
     <EditText
         android:id="@+id/task_answer_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/task_text_txt"
         android:layout_margin="5dp"
         android:hint="@string/prompt_answer"
         android:inputType="text"
         android:maxLines="@integer/max_lines_text"
         android:minLines="@integer/min_lines_text"
         android:padding="10dp"
-        android:scrollbars="vertical"
-        android:layout_below="@id/task_text_txt"/>
+        android:scrollbars="vertical" />
 
     <Button
         android:id="@+id/submit_btn"
@@ -64,7 +73,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_margin="5dp"
         android:background="@color/colorPrimary"
-        android:onClick="onClicked"
+        android:onClick="onSubmitClicked"
         android:padding="10dp"
         android:text="@string/button_answer"
         android:textColor="@android:color/background_light" />
