--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -5,11 +5,9 @@
     android:layout_width="match_parent"
     android:orientation="vertical" >
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/tasks_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </ListView>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
