Icons was added for menu items.

--- a/app/src/main/res/menu/menu_game.xml
+++ b/app/src/main/res/menu/menu_game.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/exit_item"
+        android:icon="@drawable/ic_exit_menu"
         android:onClick="logOut"
-        android:title="@string/exit_text">
+        android:title="@string/exit_text"
+        app:showAsAction="ifRoom|withText">
     </item>
 </menu>
