--- a/app/src/main/res/menu/menu_tasks.xml
+++ b/app/src/main/res/menu/menu_tasks.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/finish_item"
         android:onClick="finishGame"
-        android:title="@string/finish_txt">
+        android:icon="@drawable/ic_finish_menu"
+        android:title="@string/finish_txt"
+        app:showAsAction="ifRoom|withText">
 
     </item>
 </menu>
