--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -1,83 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    android:padding="5dp">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/task_id_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/task_cost_txt"
-        android:layout_alignStart="@+id/task_description_txt"
-        android:layout_alignTop="@+id/task_cost_txt"
-        android:layout_margin="5dp"
-        android:gravity="center"
-        android:padding="5dp"
-        android:text=""
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/task_cost_txt"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_margin="5dp"
-        android:layout_toEndOf="@id/task_id_txt"
-        android:gravity="start|center"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textStyle="italic" />
+        android:padding="5dp">
 
-    <TextView
-        android:id="@+id/task_description_txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/task_cost_txt"
-        android:layout_margin="5dp"
-        android:padding="5dp"
-        android:textColor="@android:color/black"
-        android:textSize="17sp" />
+        <TextView
+            android:id="@+id/task_id_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/task_cost_txt"
+            android:layout_alignStart="@+id/task_description_txt"
+            android:layout_alignTop="@+id/task_cost_txt"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text=""
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/task_text_txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/task_description_txt"
-        android:layout_margin="5dp"
-        android:padding="5dp"
-        android:textColor="@android:color/black"
-        android:textStyle="bold|italic" />
+        <TextView
+            android:id="@+id/task_cost_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="5dp"
+            android:layout_toEndOf="@id/task_id_txt"
+            android:gravity="start|center"
+            android:padding="10dp"
+            android:textColor="@android:color/black"
+            android:textStyle="italic" />
 
-    <EditText
-        android:id="@+id/task_answer_txt"
-        style="@android:style/Widget.Holo.EditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/task_text_txt"
-        android:layout_margin="5dp"
-        android:hint="@string/prompt_answer"
-        android:inputType="text"
-        android:maxLines="@integer/max_lines_text"
-        android:minLines="@integer/min_lines_text"
-        android:padding="10dp"
-        android:scrollbars="vertical"
-        android:selectAllOnFocus="false" />
+        <TextView
+            android:id="@+id/task_description_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/task_cost_txt"
+            android:layout_margin="5dp"
+            android:padding="5dp"
+            android:textColor="@android:color/black"
+            android:textSize="17sp" />
 
-    <Button
-        android:id="@+id/submit_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/task_answer_txt"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="5dp"
-        android:background="@color/colorPrimary"
-        android:onClick="onSubmitClicked"
-        android:padding="10dp"
-        android:text="@string/button_answer"
-        android:textColor="@android:color/background_light" />
+        <TextView
+            android:id="@+id/task_text_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/task_description_txt"
+            android:layout_margin="5dp"
+            android:padding="5dp"
+            android:textColor="@android:color/black"
+            android:textStyle="bold|italic" />
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/task_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/task_text_txt"
+            android:layout_margin="5dp"
+            android:visibility="gone" />
+
+        <EditText
+            android:id="@+id/task_answer_txt"
+            style="@android:style/Widget.Holo.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/task_image"
+            android:layout_margin="5dp"
+            android:hint="@string/prompt_answer"
+            android:inputType="text"
+            android:maxLines="@integer/max_lines_text"
+            android:minLines="@integer/min_lines_text"
+            android:padding="10dp"
+            android:scrollbars="vertical"
+            android:selectAllOnFocus="false" />
+
+        <Button
+            android:id="@+id/submit_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/task_answer_txt"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp"
+            android:background="@color/colorPrimary"
+            android:onClick="onSubmitClicked"
+            android:padding="10dp"
+            android:text="@string/button_answer"
+            android:textColor="@android:color/background_light" />
+
+    </RelativeLayout>
+</ScrollView>
