--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -59,6 +59,8 @@
             android:id="@+id/task_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
             android:layout_below="@+id/task_text_txt"
             android:layout_margin="5dp"
             android:visibility="gone" />
